// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toMatchLeft() fails when regular expression matches a string on the left 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toMatchLeft([22m[32mexpectedLeft[39m[2m)[22m

Expected Either not to match left:
  [32m/a/[39m

Received left:
  [31m\\"aa\\"[39m"
`;

exports[`.not.toMatchLeft() fails when spec deeply matches the object on the left 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toMatchLeft([22m[32mexpectedLeft[39m[2m)[22m

Expected Either not to match left:
  [32m{\\"b\\": {\\"c\\": 2}}[39m

Received left:
  [31m{\\"a\\": 1, \\"b\\": {\\"c\\": 2, \\"d\\": 3}}[39m"
`;

exports[`.not.toMatchLeft() fails when spec matches the object on the left 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toMatchLeft([22m[32mexpectedLeft[39m[2m)[22m

Expected Either not to match left:
  [32m{\\"a\\": 1}[39m

Received left:
  [31m{\\"a\\": 1}[39m"
`;

exports[`.toMatchLeft() fails when object is a right 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchLeft([22m[32mexpectedLeft[39m[2m)[22m

Expected Either to match left:
  [32m{\\"a\\": 1}[39m

Received right."
`;

exports[`.toMatchLeft() fails when regular expression does not match a string on the left 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchLeft([22m[32mexpectedLeft[39m[2m)[22m

Expected Either to match left:
  [32m/b/[39m

Received left:
  [31m\\"aa\\"[39m"
`;

exports[`.toMatchLeft() fails when spec does not match the object on the left 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchLeft([22m[32mexpectedLeft[39m[2m)[22m

Expected Either to match left:
  [32m{\\"a\\": 2}[39m

Received left:
  [31m{\\"a\\": 1, \\"b\\": 2}[39m"
`;
